Добавил обработку исключений с помощью @ExceptionHandler в MainRestController, добавил аннотации @Transactional в сервисный слой, переделал работу с сущностями с использованием Optional: SiteRepository, URLRepository, SiteService, URLService

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,9 @@ spring:
         jdbc:
           lob:
             on_contextual_creation: true
+server:
+    error:
+      include-message: always
 
 generator:
   login:
