--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     </dependencies>
 
     <build>
+        <finalName>shortcut</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
